--- a/.env-development
+++ b/.env-development
@@ -1,5 +1,5 @@
 DATABASE_SRV=mongodb+srv://teste:P%40ssw0rd@cluster0.iopsn.mongodb.net/teste?retryWrites=true&w=majority
-HOST=http://i9ty.com.br
+HOST=https://i9ty.com.br
 HTTPS_PORT=5081
 PORT=5080
 PIPEDRIVE_API_TOKEN=ece38c923d6031bf3ae731b99487c294e770d6f8
