--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "form-data": "^3.0.0",
     "moment": "^2.29.1",
     "mongoose": "^5.10.11",
     "pipedrive": "^10.4.3"
